[package]
name = "demo_git_head"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "main" }
eframe = { git = "https://github.com/emilk/egui", branch = "main", default-features = false, features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "wayland", # To support Linux (and CI)
    "x11", # To support older Linux distributions (restores one of the default features)
] }